# Aura-DEPI

./: .dockerignore  .env.example  .gitignore  conftest.py  docker-compose.yml  ideas.md  pyproject.toml  readme.md
.github/workflows/: ci.yml
agents/: graph.py  schemas.py
agents/stages/: __init__.py  copy.py  critic.py  image.py  research.py  retrieval.py
agents/tests/: test_copy_platform_budgets.py  test_critic.py  test_critic_pass_on_first.py  test_critic_retry_cap_exhaustion.py  test_critic_retry_pass_on_second.py  test_image_failure.py  test_research_degradation.py
backend/: Dockerfile  main.py
backend/api/: __init__.py  artifacts.py  brands.py  campaigns.py  documents.py  healthz.py
backend/orchestrator/: __init__.py  interrupt_sweeper.py  progress.py  runner.py
backend/persistence/: __init__.py  alembic.ini  models.py  repository.py  session.py
backend/persistence/migrations/: env.py
backend/persistence/migrations/versions/: 0001_initial.py
backend/scripts/: seed_test_brand.py
backend/tests/: conftest.py  test_artifacts_contract.py  test_brand_delete_cancels_inflight.py  test_brand_delete_cascade.py  test_brand_isolation.py  test_brands_contract.py  test_campaigns_contract.py  test_campaigns_integration.py  test_completed_run_survives_restart.py  test_concurrency.py  test_documents_contract.py  test_foundational.py  test_grounded_copy_integration.py  test_quickstart_walkthrough.py  test_restart_sweeper.py  test_run_retention.py
docs/: agents.md  api.md  architecture.md  data-model.md  evaluation.md  index.md  manual-test-phase-3.md  manual-test-phase-4.md  operations.md  rag.md  setup.md  testing.md
eval/: smoke_mlflow.py  stage_tracking.py  tracking.py
eval/benchmarks/: __init__.py  _harness.py  brand_grounding_smoke.py  concurrency_smoke.py  e2e_latency_smoke.py  repeatability_smoke.py
eval/tests/: test_stage_tracking.py
frontend/: Dockerfile  streamlit_app.py
rag/: __init__.py  chunking.py  embeddings.py  ingest.py  parsers.py
rag/tests/: __init__.py  test_chunking.py  test_ingest.py  test_parsers.py
