[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "backend*", "eval*", "rag*"]
namespaces = true

[project]
name = "aura-depi"
version = "0.1.0"
description = "Aura monorepo: backend, agents, rag, eval"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "mlflow>=3.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "openai>=1.40",
    "tavily-python>=0.5",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "tiktoken>=0.7",
    "python-ulid>=2.7",
    "chardet>=5.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=7.0",
    "httpx>=0.27",  # for FastAPI TestClient
]
frontend = [
    "streamlit>=1.32",
    "httpx>=0.27",  # frontend uses it to call the FastAPI backend
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "agents", "rag", "eval"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long (formatter handles it)
    "B008",  # function call in argument default — FastAPI's `Depends`/`Query` idiom
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
files = ["backend", "agents", "rag", "eval"]
mypy_path = "."
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "backend.tests.*",
    "agents.tests.*",
    "rag.tests.*",
    "eval.tests.*",
    "eval.benchmarks.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "tavily.*",
    "PIL",
    "PIL.*",
    "chromadb",
    "chromadb.*",
    "huggingface_hub",
    "huggingface_hub.*",
    "tiktoken",
    "tiktoken.*",
    "ulid",
    "ulid.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "langgraph.*",
    "mlflow",
    "mlflow.*",
    "chardet",
    "chardet.*",
    "docx",
    "pdfplumber",
    "pdfplumber.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["backend", "agents", "rag", "eval"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# importlib mode lets backend.tests and agents.tests coexist without the
# leaf-name collision that the legacy "prepend" import mode would hit.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
markers = [
    "live: gated against real OpenRouter / Tavily / HF — opt in with AURA_RUN_LIVE_TESTS=1",
]
